<resources>
    <string name="app_name">Recipe Cookbook</string>
    <string name="settings">Settings</string>
    <string name="tasks_header_image_content_description">Recipe Header Image</string>
    <string name="navigation_view_header_title">Recipe Cookbook</string>
    <string name="loading_recipes_error">Error while loading recipes</string>
    <string name="success_save_recipe_message">Recipe Saved</string>
    <string name="success_add_recipe_message">Recipe Added</string>
    <string name="success_delete_recipe_message">Recipe was deleted</string>
    <string name="no_recipes_image_content_description">No Recipes Image</string>
    <string name="menu_filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="label_saved_recipes">Saved Recipes</string>
    <string name="no_recipes">You have no recipes!</string>
    <string name="addrecipe_hint_title">Title</string>
    <string name="addrecipe_hint_description">Description</string>
    <string name="addrecipe_hint_type">Type</string>
    <string name="addrecipe_hint_cuisine">Cuisine</string>
    <string name="addrecipe_hint_flavor">Flavor</string>
    <string name="addrecipe_label_time">Recipe Time</string>
    <string name="addrecipe_hint_time_value">Value</string>
    <string name="addrecipe_hint_time_unit">Unit</string>
    <string name="addrecipe_label_ingredients">Ingredients</string>
    <string name="addrecipe_hint_ingredient_qty">Qty.</string>
    <string name="addrecipe_hint_ingredient_measure">Unit</string>
    <string name="addrecipe_hint_ingredient_name">Add ingredient on each line</string>
    <string name="content_description_add_ingredient">Add Ingredient</string>
    <string name="addrecipe_label_steps">Steps</string>
    <string name="addrecipe_hint_steps">Add steps on each line</string>
    <string name="nav_label_add_edit">Add/Edit Recipe</string>
    <string name="label_none">None</string>
    <string name="label_time_unit_minutes">Minutes</string>
    <string name="label_time_unit_hours">Hours</string>
    <string name="label_measure_table_spoon">Tbsp</string>
    <string name="label_nmeasure_tea_spoon">Tsp</string>
    <string name="label_measure_cups">Cup</string>
    <string name="label_measure_grams">Gram</string>
    <string name="label_measure_litre">Litre</string>
    <string name="label_measure_pinch">Pinch</string>
    <string name="label_flavor_sweet">Sweet</string>
    <string name="label_flavor_savory">Savory</string>
    <string name="label_flavor_sour">Sour</string>
    <string name="label_flavor_salty">Salty</string>
    <string name="label_flavor_fruity">Fruity</string>
    <string name="label_recipe_starter">Starters</string>
    <string name="label_recipe_main">Main Course</string>
    <string name="label_recipe_dessert">Dessert</string>
    <string name="empty_title_message">Recipe title cannot be empty</string>
    <string name="invalid_time_specified">Invalid time specified</string>
    <string name="invalid_time_value">Time value cannot be null or 0</string>
    <string name="invalid_ingredients">Empty or blank ingredients list</string>
    <string name="invalid_steps">Steps cannot be blank</string>
    <string name="recipe_sample_description">
        Mouth watering delicacy of extreme confundusness.
        Introducing the ever appealing cream pasta sauce topped with sumptous bayonetta pickle toppings.
        Try out this amazing dish and let others known too as this is the one and truly dish said to be made by the gods themselves.
    </string>
    <string name="ingredients_required_label">Ingredients Required</string>
    <string name="steps_label">Steps</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="error_loading_recipe">Error loading recipe details</string>
    <string name="menu_delete_task">Delete Recipe</string>
    <string name="menu_camera">Take Photo</string>
    <string name="menu_gallery">Pick from Gallery</string>
    <string name="menu_random_image">Random Image</string>
    <string name="error_adding_image">Error while adding image</string>
    <string name="error_invalid_path">Invalid image path</string>
</resources>
