<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/addrecipe_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addrecipe_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility="visible">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_title_textinput_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/addrecipe_description_textinput_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addrecipe_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addrecipe_hint_title"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_description_textinput_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@id/addrecipe_type_textinput_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addrecipe_title_textinput_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addrecipe_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addrecipe_hint_description"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_type_textinput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/addrecipe_flavor_textinput_layout"
                    app:layout_constraintTop_toBottomOf="@+id/addrecipe_description_textinput_layout"
                    app:layout_constraintBottom_toTopOf="@id/addrecipe_cuisine_textinput_layout">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/aaddrecipe_type_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/addrecipe_hint_type" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_flavor_textinput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/addrecipe_type_textinput_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/addrecipe_type_textinput_layout"
                    app:layout_constraintBottom_toBottomOf="@id/addrecipe_type_textinput_layout">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/aaddrecipe_flavor_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/addrecipe_hint_flavor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_cuisine_textinput_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addrecipe_type_textinput_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addrecipe_cuisine_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addrecipe_hint_cuisine"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/recipe_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addrecipe_label_time"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addrecipe_cuisine_textinput_layout"
                    app:layout_constraintBottom_toTopOf="@id/addrecipe_time_value_textinput_layout"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_time_value_textinput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintDimensionRatio="w,2:1"
                    app:layout_constraintEnd_toStartOf="@id/addrecipe_time_unit_textinput_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_time_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addrecipe_time_value_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addrecipe_hint_time_value"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addrecipe_time_unit_textinput_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/addrecipe_time_value_textinput_layout"
                    app:layout_constraintTop_toTopOf="@id/addrecipe_time_value_textinput_layout"
                    app:layout_constraintBottom_toBottomOf="@id/addrecipe_time_value_textinput_layout">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/addrecipe_time_unit_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addrecipe_hint_time_unit"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>