<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="recipe"
            type="dev.aayushgupta.recipecookbook.data.domain.Recipe" />

        <variable
            name="viewmodel"
            type="dev.aayushgupta.recipecookbook.recipedetails.RecipeDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/recipe_detail_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/recipe_detail_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipe_detail_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:visibility="visible">

                <!--
                    TODO: Implement top crop using custom imageview:
                    https://stackoverflow.com/questions/29783358/how-set-imageview-scaletype-to-topcrop
                -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/recipe_detail_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitCenter"
                    app:recipeImage="@{recipe}"
                    app:layout_constraintDimensionRatio="w,1:2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/recipe_detail_cuisine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:recipeCuisineText="@{recipe}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_image"
                    tools:text="Atalantean" />

                <TextView
                    android:id="@+id/recipe_detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:recipeType="@{recipe}"
                    app:layout_constraintBaseline_toBaselineOf="@id/recipe_detail_cuisine"
                    app:layout_constraintStart_toEndOf="@+id/recipe_detail_cuisine"
                    tools:text="Starter" />

                <TextView
                    android:id="@+id/recipe_detail_time_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:recipeTime="@{recipe}"
                    app:layout_constraintBaseline_toBaselineOf="@id/recipe_detail_cuisine"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="45 mins." />

                <TextView
                    android:id="@+id/recipe_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:text="@{recipe.title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_cuisine"
                    tools:text="Van Doom Tortilla" />

                <TextView
                    android:id="@+id/recipe_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    app:recipeDescription="@{recipe}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_title"
                    tools:text="@string/recipe_sample_description" />


                <TextView
                    android:id="@+id/recipe_detail_ingredient_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:text="@string/ingredients_required_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_description"
                    tools:text="Ingredients Required" />

                <TextView
                    android:id="@+id/recipe_detail_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:recipeIngredients="@{recipe}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_ingredient_label"
                    tools:text="400gm Chicken Thighs" />

                <TextView
                    android:id="@+id/recipe_detail_steps_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:text="@string/steps_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_ingredient_list"
                    tools:text="Steps" />

                <TextView
                    android:id="@+id/recipe_detail_steps_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:recipeSteps="@{recipe}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_detail_steps_label"
                    tools:text="1. Do Step 1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_recipe_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_edit"
            android:onClick="@{() -> viewmodel.editRecipe()}"
            app:fabSize="normal"
            app:layout_anchor="@id/recipe_detail_scroll_container"
            app:layout_anchorGravity="bottom|right|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>